--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <h1> VALIDACION DE TARJETA</h1>
+    </header>
+        <main></main>
+       
+        <form action="" class="NumerodeTarjeta">
+       <label for="NumerodeTarjeta">Numero de Tarjeta</label>
+          <input type="text" name="NumerodeTarjeta" required="" pattern="[0-9]+" id="NumerodeTarjeta" >
+        <br>
+        <button>Enviar</button>
+      </form>
+
+
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
