--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
       <div class="nan">
         <label>Numero de Tarjeta</label>
-        <input type="text" id="tarjeta" name="numeroTc"  maxlength="16"> 
+        <input type="text" id="tarjeta" name="numeroTc"  maxlength="16" required=""> 
         <button id="validar" class="boton"> Haz clic  para validar</button>  
       </div>
       <h3 class = "imprimir" id="imprimir"></h3>
