--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 
       <div class="nan">
         <label>Numero de Tarjeta</label>
-        <input type="text" id="tarjeta" name="numeroTc"  maxlength="16" required=""> 
-        <button id="validar" class="boton"> Haz clic  para validar</button>  
+        <input type="number" id="tarjeta" name="numeroTc"  max="19" required=" "> 
+        <button id="validar"  class="boton"> Haz clic  para validar</button>  
       </div>
       <h3 class = "imprimir" id="imprimir"></h3>
       <h4 class = "ocultar" id="ocultar"></h4> 
