--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="nan">
         <label>Numero de Tarjeta</label>
-        <input type="number" id="tarjeta" name="numeroTc" min ="16" max="19" required=" "> 
+        <input type="number" id="tarjeta" name="numeroTc"  max="19" required=" "> 
         <button id="validar"  class="boton"> Haz clic  para validar</button>  
       </div>
       <h3 class = "imprimir" id="imprimir"></h3>
