--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <main>
 
       <div class="nan">
-        <label>Numero de Tarjeta</label>
-        <input type="number" id="tarjeta" name="numeroTc"  max="19" required=" "> 
+        <label for ="tarjeta">Numero de Tarjeta</label>
+        <input id="tarjeta"  type="number" name="tarjeta" min="15" max="16" required> 
         <button id="validar"  class="boton"> Haz clic  para validar</button>  
       </div>
       <h3 class = "imprimir" id="imprimir"></h3>
